# TopAdvisor

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle  dependencies.bzl  gradle.properties  rules.bzl
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/com/travel/advisor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/travel/advisor/extensions/: ActivityExtensions.kt  ViewExtensions.kt  ViewHolderExtensions.kt
app/src/main/java/com/travel/advisor/model/: Listing.kt  ListingResponse.kt  ListingType.kt  ListingTypeAdapter.kt
app/src/main/java/com/travel/advisor/repository/: ListingsRepository.kt
app/src/main/java/com/travel/advisor/ui/: BaseActivity.kt
app/src/main/java/com/travel/advisor/ui/details/: ListingDetailsActivity.kt
app/src/main/java/com/travel/advisor/ui/list/: ListingAdapter.kt  ListingViewHolder.kt  ListingsActivity.kt
app/src/main/java/com/travel/advisor/viewmodel/: ListingViewModel.kt  ViewState.kt
app/src/main/java/com/travel/advisor/viewmodel/factory/: ListingViewModelFactory.kt
app/src/main/res/layout/: listing_details.xml  listing_item.xml  listings_activity.xml
app/src/main/res/raw/: listings.json
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/travel/advisor/: ListingViewModelTest.kt
gradle/wrapper/: gradle-wrapper.properties
