load("@rules_jvm_external//:defs.bzl", "artifact")
load("//:rules.bzl", "android_binary", "kt_android_library", "kt_jvm_test")

package(default_visibility = ["//visibility:private"])

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    manifest_values = {
        "minSdkVersion": "21"
    },
    enable_data_binding = True,
    multidex = "native",
    custom_package = "com.travel.advisor",
    deps = [
        ":lib",
        artifact("androidx.core:core"),
        artifact("androidx.databinding:databinding-common"),
        artifact("androidx.databinding:databinding-adapters"),
        artifact("androidx.databinding:databinding-runtime"),
    ],
)

kt_android_library(
    name = "lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    deps = [
        "//:moshi_kotlin",
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.constraintlayout:constraintlayout"),
        artifact("androidx.lifecycle:lifecycle-extensions"),
        artifact("androidx.lifecycle:lifecycle-viewmodel-ktx"),
        artifact("androidx.recyclerview:recyclerview"),
        artifact("com.github.bumptech.glide:compiler"),
        artifact("com.github.bumptech.glide:glide"),
        artifact("com.google.android.material:material"),
    ],
)

kt_jvm_test(
    name = "ListingViewModelTest",
    size = "small",
    srcs = ["src/test/java/com/travel/advisor/ListingViewModelTest.kt"],
    test_class = "com.travel.advisor.ListingViewModelTest",
    deps = [
        ":app",
        artifact("junit:junit"),
        artifact("androidx.lifecycle:lifecycle-extensions"),
    ],
)
